fixed spacing between project thumbnail and info starting at max-width 1179px

--- a/styles/partials/_mediaQ.scss
+++ b/styles/partials/_mediaQ.scss
@@ -57,7 +57,7 @@
             align-items: center;
             justify-content: center;
             .projectInfo {
-                margin-top: 5rem;
+                margin-top: 10rem;
                 padding: 0;
                 .arrowUpRight {
                     font-size: 1.68rem;
