--- a/styles/style.css
+++ b/styles/style.css
@@ -985,7 +985,7 @@ footer .copyrightContainer .wrapper .creditsContainer .dimpleCredit a:hover {
     justify-content: center;
   }
   .projects .projectContainer .project .projectInfo {
-    margin-top: 5rem;
+    margin-top: 10rem;
     padding: 0;
   }
   .projects .projectContainer .project .projectInfo .arrowUpRight {
